# sub_font_loader

./: Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  archive.rs  cli.rs  discover.rs  input.rs  lib.rs  main.rs  report.rs  session.rs  windows_api_wrapper.rs
src/font/: index.rs  mod.rs  names.rs
src/font_loader/: windows.rs
src/gui/: app.rs  commands.rs  config.rs  mod.rs  state.rs  system_fonts.rs  view_model.rs  worker.rs
src/subtitle/: ass.rs  encoding.rs  fonts.rs  mod.rs
