[package]
name = "sub_font_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argh = "0.1.19"
ctrlc = "3.5.2"
sevenz-rust2 = { version = "0.21.0", default-features = false, features = ["util"] }
tempfile = "3.27.0"
unrar-ng = "0.7.5"
walkdir = "2.5.0"
windows-sys = { version = "0.61.2", default-features = false, features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
