[package]
name = "sub_font_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argh = "0.1.19"
csv = "1.4.0"
ctrlc = "3.5.2"
encoding_rs = "0.8.35"
redb = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sevenz-rust2 = { version = "0.21.0", default-features = false, features = ["util"] }
tempfile = "3.27.0"
toml = "1.0.6"
ttf-parser = "0.25.1"
unicode-normalization = "0.1.25"
unrar-ng = "0.7.5"
walkdir = "2.5.0"
windows-sys = { version = "0.61.2", default-features = false, features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
winsafe = { version = "0.0.27", features = ["comctl", "gui", "ole", "shell", "user"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
